wrapped in code block

--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -1,3 +1,26 @@
+- [\[\]{#page\_1}**\[1\]{.big}** **Working with Numbers** {#ch01 .h2}](#page_11big-working-with-numbers-ch01-h2)
+  - [**Basic Mathematical Operations** {#ch01lev1sec01 .h3}](#basic-mathematical-operations-ch01lev1sec01-h3)
+  - [\[\]{#page\_4}**Labels: Attaching Names to Numbers** {#ch01lev1sec02 .h3}](#page_4labels-attaching-names-to-numbers-ch01lev1sec02-h3)
+  - [**Different Kinds of Numbers** {#ch01lev1sec03 .h3}](#different-kinds-of-numbers-ch01lev1sec03-h3)
+    - [***Working with Fractions*** {#ch01lev2sec01 .h4}](#working-with-fractions-ch01lev2sec01-h4)
+    - [***Complex Numbers*** {#ch01lev2sec02 .h4}](#complex-numbers-ch01lev2sec02-h4)
+  - [\[\]{#page\_8}**Getting User Input** {#ch01lev1sec04 .h3}](#page_8getting-user-input-ch01lev1sec04-h3)
+    - [***Handling Exceptions and Invalid Input*** {#ch01lev2sec03 .h4}](#handling-exceptions-and-invalid-input-ch01lev2sec03-h4)
+    - [***Fractions and Complex Numbers as Input*** {#ch01lev2sec04 .h4}](#fractions-and-complex-numbers-as-input-ch01lev2sec04-h4)
+  - [**Writing Programs That Do the Math for You** {#ch01lev1sec05 .h3}](#writing-programs-that-do-the-math-for-you-ch01lev1sec05-h3)
+    - [***Calculating the Factors of an Integer*** {#ch01lev2sec05 .h4}](#calculating-the-factors-of-an-integer-ch01lev2sec05-h4)
+    - [\[\]{#page\_15}***Generating Multiplication Tables*** {#ch01lev2sec06 .h4}](#page_15generating-multiplication-tables-ch01lev2sec06-h4)
+    - [***Converting Units of Measurement*** {#ch01lev2sec07 .h4}](#converting-units-of-measurement-ch01lev2sec07-h4)
+    - [***Finding the Roots of a Quadratic Equation*** {#ch01lev2sec08 .h4}](#finding-the-roots-of-a-quadratic-equation-ch01lev2sec08-h4)
+  - [**What You Learned** {#ch01lev1sec06 .h3}](#what-you-learned-ch01lev1sec06-h3)
+  - [**\[Programming Challenges\]{.bordera}** {#ch01lev1sec07 .h3}](#programming-challengesbordera-ch01lev1sec07-h3)
+    - [***#1: Even-Odd Vending Machine*** {#ch01lev2sec09 .h4}](#1-even-odd-vending-machine-ch01lev2sec09-h4)
+    - [***#2: Enhanced Multiplication Table Generator*** {#ch01lev2sec10 .h4}](#2-enhanced-multiplication-table-generator-ch01lev2sec10-h4)
+    - [***#3: Enhanced Unit Converter*** {#ch01lev2sec11 .h4}](#3-enhanced-unit-converter-ch01lev2sec11-h4)
+    - [***#4: Fraction Calculator*** {#ch01lev2sec12 .h4}](#4-fraction-calculator-ch01lev2sec12-h4)
+    - [***#5: Give Exit Power to the User*** {#ch01lev2sec13 .h4}](#5-give-exit-power-to-the-user-ch01lev2sec13-h4)
+
+
 []{#page_1}**[1]{.big}** **Working with Numbers** {#ch01 .h2}
 -------------------------------------------------
 
@@ -11,7 +34,7 @@ using Python itself. We'll start by performing basic mathematical
 operations, and then we'll write simple programs for manipulating and
 understanding numbers. Let's get started!
 
-### **Basic Mathematical Operations** {#ch01lev1sec01 .h3}
+### **Basic Mathematical Operations**
 
 The *Python interactive shell* is going to be our friend in this book.
 Start the Python 3 IDLE shell and say "hello" (see [Figure
@@ -37,6 +60,7 @@ Just type an expression and Python will evaluate it. After you press
 Give it a try. You can add and subtract numbers using the addition
 ([+]{.literal}) and subtraction ([--]{.literal}) operators. For example:
 
+```
 \>\>\> [1 + 2]{.codestrong}\
 3\
 \>\>\> [1 + 3.5]{.codestrong}\
@@ -47,6 +71,7 @@ Give it a try. You can add and subtract numbers using the addition
 55\
 \>\>\> [-1.1 + 5]{.codestrong}\
 3.9
+```
 
 To multiply, use the multiplication ([\*]{.literal}) operator:
 
