--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -60,7 +60,7 @@ Just type an expression and Python will evaluate it. After you press
 Give it a try. You can add and subtract numbers using the addition
 ([+]{.literal}) and subtraction ([--]{.literal}) operators. For example:
 
-```
+```python
 \>\>\> [1 + 2]{.codestrong}\
 3\
 \>\>\> [1 + 3.5]{.codestrong}\
