--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -1,27 +1,27 @@
-- [\[\]{#page\_1}**\[1\]{.big}** **Working with Numbers** {#ch01 .h2}](#page_11big-working-with-numbers-ch01-h2)
-  - [**Basic Mathematical Operations** {#ch01lev1sec01 .h3}](#basic-mathematical-operations-ch01lev1sec01-h3)
-  - [\[\]{#page\_4}**Labels: Attaching Names to Numbers** {#ch01lev1sec02 .h3}](#page_4labels-attaching-names-to-numbers-ch01lev1sec02-h3)
-  - [**Different Kinds of Numbers** {#ch01lev1sec03 .h3}](#different-kinds-of-numbers-ch01lev1sec03-h3)
-    - [***Working with Fractions*** {#ch01lev2sec01 .h4}](#working-with-fractions-ch01lev2sec01-h4)
-    - [***Complex Numbers*** {#ch01lev2sec02 .h4}](#complex-numbers-ch01lev2sec02-h4)
-  - [\[\]{#page\_8}**Getting User Input** {#ch01lev1sec04 .h3}](#page_8getting-user-input-ch01lev1sec04-h3)
-    - [***Handling Exceptions and Invalid Input*** {#ch01lev2sec03 .h4}](#handling-exceptions-and-invalid-input-ch01lev2sec03-h4)
-    - [***Fractions and Complex Numbers as Input*** {#ch01lev2sec04 .h4}](#fractions-and-complex-numbers-as-input-ch01lev2sec04-h4)
-  - [**Writing Programs That Do the Math for You** {#ch01lev1sec05 .h3}](#writing-programs-that-do-the-math-for-you-ch01lev1sec05-h3)
-    - [***Calculating the Factors of an Integer*** {#ch01lev2sec05 .h4}](#calculating-the-factors-of-an-integer-ch01lev2sec05-h4)
-    - [\[\]{#page\_15}***Generating Multiplication Tables*** {#ch01lev2sec06 .h4}](#page_15generating-multiplication-tables-ch01lev2sec06-h4)
-    - [***Converting Units of Measurement*** {#ch01lev2sec07 .h4}](#converting-units-of-measurement-ch01lev2sec07-h4)
-    - [***Finding the Roots of a Quadratic Equation*** {#ch01lev2sec08 .h4}](#finding-the-roots-of-a-quadratic-equation-ch01lev2sec08-h4)
-  - [**What You Learned** {#ch01lev1sec06 .h3}](#what-you-learned-ch01lev1sec06-h3)
-  - [**\[Programming Challenges\]{.bordera}** {#ch01lev1sec07 .h3}](#programming-challengesbordera-ch01lev1sec07-h3)
-    - [***#1: Even-Odd Vending Machine*** {#ch01lev2sec09 .h4}](#1-even-odd-vending-machine-ch01lev2sec09-h4)
-    - [***#2: Enhanced Multiplication Table Generator*** {#ch01lev2sec10 .h4}](#2-enhanced-multiplication-table-generator-ch01lev2sec10-h4)
-    - [***#3: Enhanced Unit Converter*** {#ch01lev2sec11 .h4}](#3-enhanced-unit-converter-ch01lev2sec11-h4)
-    - [***#4: Fraction Calculator*** {#ch01lev2sec12 .h4}](#4-fraction-calculator-ch01lev2sec12-h4)
-    - [***#5: Give Exit Power to the User*** {#ch01lev2sec13 .h4}](#5-give-exit-power-to-the-user-ch01lev2sec13-h4)
+- [**Working with Numbers**](#working-with-numbers)
+- [**Basic Mathematical Operations**](#basic-mathematical-operations)
+- [**Labels: Attaching Names to Numbers**](#labels-attaching-names-to-numbers)
+- [**Different Kinds of Numbers**](#different-kinds-of-numbers)
+  - [***Working with Fractions***](#working-with-fractions)
+  - [***Complex Numbers***](#complex-numbers)
+- [**Getting User Input**](#getting-user-input)
+  - [***Handling Exceptions and Invalid Input***](#handling-exceptions-and-invalid-input)
+  - [***Fractions and Complex Numbers as Input***](#fractions-and-complex-numbers-as-input)
+- [**Writing Programs That Do the Math for You**](#writing-programs-that-do-the-math-for-you)
+  - [***Calculating the Factors of an Integer***](#calculating-the-factors-of-an-integer)
+  - [***Generating Multiplication Tables***](#generating-multiplication-tables)
+  - [***Converting Units of Measurement***](#converting-units-of-measurement)
+  - [***Finding the Roots of a Quadratic Equation***](#finding-the-roots-of-a-quadratic-equation)
+- [**What You Learned**](#what-you-learned)
+- [**\[Programming Challenges\]**](#programming-challenges)
+  - [***#1: Even-Odd Vending Machine***](#1-even-odd-vending-machine)
+  - [***#2: Enhanced Multiplication Table Generator***](#2-enhanced-multiplication-table-generator)
+  - [***#3: Enhanced Unit Converter***](#3-enhanced-unit-converter)
+  - [***#4: Fraction Calculator***](#4-fraction-calculator)
+  - [***#5: Give Exit Power to the User***](#5-give-exit-power-to-the-user)
 
 
-[]{#page_1}**[1]{.big}** **Working with Numbers** {#ch01 .h2}
+### **Working with Numbers** 
 -------------------------------------------------
 
 ::: {.image1}
@@ -150,7 +150,7 @@ is 10; 10 times 5 is 50.
 These are the absolute basics of manipulating numbers in Python. Let's
 now learn how we can assign names to numbers.
 
-### []{#page_4}**Labels: Attaching Names to Numbers** {#ch01lev1sec02 .h3}
+### **Labels: Attaching Names to Numbers** 
 
 As we start designing more complex Python programs, we'll assign names
 to numbers---at times for convenience, but mostly out of necessity.
@@ -179,7 +179,7 @@ to something like *x* in the equation *x* + 2 = 3), in this book I use
 the term *variable* only in the context of mathematical equations and
 expressions.
 
-### **Different Kinds of Numbers** {#ch01lev1sec03 .h3}
+### **Different Kinds of Numbers**
 
 You may have noticed that I've used two kinds of numbers to demonstrate
 the mathematical operations---numbers without a decimal point, which you
@@ -234,7 +234,7 @@ perform the reverse conversion:
 [float()]{.literal} takes the integer that was input and adds a decimal
 point to turn it into a floating point number.
 
-#### ***Working with Fractions*** {#ch01lev2sec01 .h4}
+#### ***Working with Fractions***
 
 Python can also handle fractions, but to do that, we'll need to use
 Python's [fractions]{.literal} module. You can think of a *module* as a
@@ -285,7 +285,7 @@ Fraction(2, 1)
 Now you know the basics of working with fractions in Python. Let's move
 on to a different kind of number.
 
-#### ***Complex Numbers*** {#ch01lev2sec02 .h4}
+#### ***Complex Numbers*** 
 
 The numbers we've seen so far are the so-called *real numbers*. Python
 also supports *complex numbers* with the imaginary part identified by
@@ -371,7 +371,7 @@ The standard library's [cmath]{.literal} module ([cmath]{.literal} for
 *complex math*) provides access to a number of other specialized
 functions to work with complex numbers.
 
-### []{#page_8}**Getting User Input** {#ch01lev1sec04 .h3}
+### **Getting User Input** 
 
 As we start to write programs, it will help to have a nice, simple way
 to accept user input via the [input()]{.literal} function. That way, we
@@ -451,7 +451,7 @@ You may find it useful to perform the conversion in a
 and alert the user that the program has encountered an invalid input.
 We'll look at [try\...except]{.literal} blocks next.
 
-#### ***Handling Exceptions and Invalid Input*** {#ch01lev2sec03 .h4}
+#### ***Handling Exceptions and Invalid Input*** 
 
 If you're not familiar with [try\...except]{.literal}, the basic idea is
 this: if you execute one or more statements in a
@@ -543,7 +543,7 @@ while keeping inputs like 1.0, which is expressed as a floating point
 number but is equivalent to an integer. We'll see how the method would
 fit into a larger program a bit later.
 
-#### ***Fractions and Complex Numbers as Input*** {#ch01lev2sec04 .h4}
+#### ***Fractions and Complex Numbers as Input*** 
 
 The [Fraction]{.literal} class we learned about earlier is also capable
 of converting a string such as [\'3/4\']{.literal} to a
@@ -605,13 +605,13 @@ It's a good idea to catch the [ValueError]{.literal} exception when
 converting a string to a complex number, as we've done for other number
 types.
 
-### **Writing Programs That Do the Math for You** {#ch01lev1sec05 .h3}
+### **Writing Programs That Do the Math for You**
 
 Now that we have learned some of the basic concepts, we can combine them
 with Python's conditional and looping statements to make some programs
 that are a little more advanced and useful.
 
-#### ***Calculating the Factors of an Integer*** {#ch01lev2sec05 .h4}
+#### ***Calculating the Factors of an Integer*** 
 
 When a nonzero integer, [a]{.literal}, divides another integer,
 [b]{.literal}, leaving a remainder 0, [a]{.literal} is said to be a
@@ -746,7 +746,7 @@ the [is\_integer()]{.literal} method [➋]{.ent} to make sure the input is
 valid. If the input isn't a positive integer, the program prints a
 user-friendly instruction instead of just a big error message.
 
-#### []{#page_15}***Generating Multiplication Tables*** {#ch01lev2sec06 .h4}
+#### ***Generating Multiplication Tables*** 
 
 Consider three numbers, *a*, *b*, and *n*, where *n* is an integer, such
 that
@@ -881,7 +881,7 @@ integer, zeros are added at the end:
 Two zeros are added because we specified that we should print exactly
 two numbers after the decimal point.
 
-#### ***Converting Units of Measurement*** {#ch01lev2sec07 .h4}
+#### ***Converting Units of Measurement*** 
 
 The International System of Units defines seven *base quantities*. These
 are then used to derive other quantities, referred to as *derived
@@ -1035,7 +1035,7 @@ This program just converts between miles and kilometers, but in a
 programming challenge later, you'll extend this program so that it can
 perform conversions of other units.
 
-#### ***Finding the Roots of a Quadratic Equation*** {#ch01lev2sec08 .h4}
+#### ***Finding the Roots of a Quadratic Equation*** 
 
 What do you do when you have an equation such as *x* + 500 -- 79 = 10
 and you need to find the value of the unknown variable, *x*? You
@@ -1162,7 +1162,7 @@ The roots printed above are complex numbers (indicated by
 [j]{.literal}), and the program has no problem calculating or displaying
 them.
 
-### **What You Learned** {#ch01lev1sec06 .h3}
+### **What You Learned** 
 
 Great work on finishing the first chapter! You learned to write programs
 that recognize integers, floating point numbers, fractional numbers
@@ -1174,14 +1174,14 @@ programs that will do mathematical calculations for you. Before we move
 on, here are some programming challenges that will give you a chance to
 further apply what you've learned.
 
-### **[Programming Challenges]{.bordera}** {#ch01lev1sec07 .h3}
+### **[Programming Challenges]** 
 
 Here are a few challenges that will give you a chance to practice the
 concepts from this chapter. Each problem can be solved in multiple ways,
 but you can find sample solutions at
 *<http://www.nostarch.com/doingmathwithpython/>*.
 
-#### ***\#1: Even-Odd Vending Machine*** {#ch01lev2sec09 .h4}
+#### ***\#1: Even-Odd Vending Machine*** 
 
 Try writing an "even-odd vending machine," which will take a number as
 input and do two things:
@@ -1200,21 +1200,21 @@ Similarly, if the input is [1]{.literal}, the program should print
 to display an error message if the input is a number with significant
 digits beyond the decimal point.
 
-#### ***\#2: Enhanced Multiplication Table Generator*** {#ch01lev2sec10 .h4}
+#### ***\#2: Enhanced Multiplication Table Generator*** 
 
 Our multiplication table generator is cool, but it prints only the first
 10 multiples. Enhance the generator so that the user can specify both
 the number and up to *which* multiple. For example, I should be able to
 input that I want to see a table listing the first 15 multiples of 9.
 
-#### ***\#3: Enhanced Unit Converter*** {#ch01lev2sec11 .h4}
+#### ***\#3: Enhanced Unit Converter*** 
 
 The unit conversion program we wrote in this chapter is limited to
 conversions between kilometers and miles. Try extending the program to
 convert between units of mass (such as kilograms and pounds) and between
 units of temperature (such as Celsius and Fahrenheit).
 
-#### ***\#4: Fraction Calculator*** {#ch01lev2sec12 .h4}
+#### ***\#4: Fraction Calculator*** 
 
 Write a calculator that can perform the basic mathematical operations on
 two fractions. It should ask the user for two fractions and the
@@ -1261,7 +1261,7 @@ Result of Subtraction: 2/4
 In the case of division, you should let the user know whether the first
 fraction is divided by the second fraction or vice versa.
 
-#### ***\#5: Give Exit Power to the User*** {#ch01lev2sec13 .h4}
+#### ***\#5: Give Exit Power to the User*** 
 
 All the programs we have written so far work only for one iteration of
 input and output. For example, consider the program to print the
