--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -13,7 +13,7 @@
   - [***Converting Units of Measurement***](#converting-units-of-measurement)
   - [***Finding the Roots of a Quadratic Equation***](#finding-the-roots-of-a-quadratic-equation)
 - [**What You Learned**](#what-you-learned)
-- [**\[Programming Challenges\]**](#programming-challenges)
+- [**Programming Challenges**](#programming-challenges)
   - [***#1: Even-Odd Vending Machine***](#1-even-odd-vending-machine)
   - [***#2: Enhanced Multiplication Table Generator***](#2-enhanced-multiplication-table-generator)
   - [***#3: Enhanced Unit Converter***](#3-enhanced-unit-converter)
@@ -24,9 +24,7 @@
 ### **Working with Numbers** 
 -------------------------------------------------
 
-::: {.image1}
 ![image](graphics/common-01.jpg)
-:::
 
 Let's take our first steps toward using Python to explore the world of
 math and science. We'll keep it simple now so you can get a handle on
@@ -47,11 +45,9 @@ Congratulations---you just wrote a program!
 When you see the [\>\>\>]{.literal} prompt again, IDLE is ready for more
 instructions.
 
-::: {.image}
-[]{#page_2}![image](graphics/f01-01.jpg)
-:::
+![image](graphics/f01-01.jpg)
 
-[]{#ch1fig1}*Figure 1-1: Python 3 IDLE shell*
+*Figure 1-1: Python 3 IDLE shell*
 
 Python can act like a glorified calculator, doing simple computations.
 Just type an expression and Python will evaluate it. After you press
@@ -61,47 +57,55 @@ Give it a try. You can add and subtract numbers using the addition
 ([+]{.literal}) and subtraction ([--]{.literal}) operators. For example:
 
 ```python
-\>\>\> [1 + 2]{.codestrong}\
+>>> [1 + 2]
 3\
-\>\>\> [1 + 3.5]{.codestrong}\
-4.5\
-\>\>\> [-1 + 2.5]{.codestrong}\
-1.5\
-\>\>\> [100 -- 45]{.codestrong}\
-55\
-\>\>\> [-1.1 + 5]{.codestrong}\
+>>> [1 + 3.5]
+4.5
+>>> [-1 + 2.5]
+1.5
+>>> [100 -- 45]
+55
+>>> [-1.1 + 5]
 3.9
 ```
 
-To multiply, use the multiplication ([\*]{.literal}) operator:
+To multiply, use the multiplication (*) operator:
 
-\>\>\> [3 \* 2]{.codestrong}\
-6\
-\>\>\> [3.5 \* 1.5]{.codestrong}\
+```python
+>>> [3 * 2]
+6
+>>> [3.5 * 1.5]
 5.25
+```
 
 To divide, use the division ([/]{.literal}) operator:
 
-\>\>\> [3 / 2]{.codestrong}\
-1.5\
-\>\>\> [4 / 2]{.codestrong}\
+```python
+>>> [3 / 2]
+1.5
+>>> [4 / 2]
 2.0
+```
 
 As you can see, when you ask Python to perform a division operation, it
 returns the fractional part of the number as well. If you want the
 result in the form of an integer, with any decimal values removed, you
 should use the floor division ([//]{.literal}) operator:
 
+```python
 \>\>\> [3 // 2]{.codestrong}\
 1
+```
 
 []{#page_3}The floor division operator divides the first number by the
 second number and then rounds down the result to the next lowest
 integer. This becomes interesting when one of the numbers is negative.
 For example:
 
+```python
 \>\>\> [-3 // 2]{.codestrong}\
 -2
+```
 
 The final result is the integer lower than the result of the division
 operation ([-3/2 = -1.5]{.literal}, so the final result is
@@ -110,25 +114,31 @@ operation ([-3/2 = -1.5]{.literal}, so the final result is
 On the other hand, if you want just the remainder, you should use the
 modulo ([%]{.literal}) operator:
 
+```python
 \>\>\> [9 % 2]{.codestrong}\
 1
+```
 
 You can calculate the power of numbers using the exponential
 ([\*\*]{.literal}) operator. The examples below illustrate this:
 
+```python
 \>\>\> [2 \*\* 2]{.codestrong}\
 4\
 \>\>\> [2 \*\* 10]{.codestrong}\
 1024\
 \>\>\> [1 \*\* 10]{.codestrong}\
 1
+```
 
 We can also use the exponential symbol to calculate powers less than 1.
 For example, the square root of a number *n* can be expressed as
 *n*^1/2^ and the cube root as *n*^1/3^:
 
+```python
 \>\>\> [8 \*\* (1/3)]{.codestrong}\
 2.0
+```
 
 As this example shows, you can use parentheses to combine mathematical
 operations into more complicated expressions. Python will evaluate the
@@ -137,10 +147,12 @@ calculations---parentheses, exponents, multiplication, division,
 addition, and subtraction. Consider the following two expressions---one
 without parentheses and one with:
 
+```python
 \>\>\> [5 + 5 \* 5]{.codestrong}\
 30\
 \>\>\> [(5 + 5) \* 5]{.codestrong}\
 50
+```
 
 In the first example, Python calculates the multiplication first: 5
 times 5 is 25; 25 plus 5 is 30. In the second example, the expression
@@ -156,12 +168,14 @@ As we start designing more complex Python programs, we'll assign names
 to numbers---at times for convenience, but mostly out of necessity.
 Here's a simple example:
 
+```python
 [➊]{.ent} \>\>\> [a = 3]{.codestrong}\
    \>\>\> [a + 1]{.codestrong}\
    4\
 [➋]{.ent} \>\>\> [a = 5]{.codestrong}\
    \>\>\> [a + 1]{.codestrong}\
    6
+```
 
 At [➊]{.ent}, we assign the name [a]{.literal} to the number 3. When we
 ask Python to evaluate the result of the expression [a + 1]{.literal},
@@ -196,6 +210,7 @@ Python considers integers and floating point numbers to be different
 *types*. If you use the function [type()]{.literal}, Python will tell
 you what kind of number you've just input. For example:
 
+```python
 \>\>\> [type(3)]{.codestrong}\
 \<class \'int\'\>\
 \
@@ -204,6 +219,7 @@ you what kind of number you've just input. For example:
 \
 \>\>\> [type(3.0)]{.codestrong}\
 \<class \'float\'\>
+```
 
 []{#page_5}Here, you can see that Python classifies the number 3 as an
 integer (type [\'int\']{.literal}) but classifies 3.0 as a floating
@@ -218,18 +234,22 @@ like that as valid input in these programs, we'll have to convert them
 from floating point numbers to integers. Luckily, there's a function
 built in to Python that does just that:
 
+```python
 \>\>\> [int(3.8)]{.codestrong}\
 3\
 \>\>\> [int(3.0)]{.codestrong}\
 3
+```
 
 The function [int()]{.literal} takes the input floating point number,
 gets rid of anything that comes after the decimal point, and returns the
 resulting integer. The [float()]{.literal} function works similarly to
 perform the reverse conversion:
 
+```python
 \>\>\> [float(3)]{.codestrong}\
 3.0
+```
 
 [float()]{.literal} takes the integer that was input and adds a decimal
 point to turn it into a floating point number.
@@ -252,10 +272,12 @@ a way of telling Python that we want to use the class from this module.
 Let's see a quick example---we'll create a new label, [f]{.literal},
 which refers to the fraction 3/4:
 
+```python
 [➊]{.ent} \>\>\> [from fractions import Fraction]{.codestrong}\
 [➋]{.ent} \>\>\> [f = Fraction(3, 4)]{.codestrong}\
 [➌]{.ent} \>\>\> [f]{.codestrong}\
    Fraction(3, 4)
+```
 
 We first import the [Fraction]{.literal} class from the
 [fractions]{.literal} module [➊]{.ent}. Next, we create an object of
@@ -269,8 +291,10 @@ The basic mathematical operations, including the comparison operations,
 are all valid for fractions. You can also combine a fraction, an
 integer, and a floating point number in a single expression:
 
+```python
 \>\>\> [Fraction(3, 4) + 1 + 1.5]{.codestrong}\
 3.25
+```
 
 When you have a floating point number in an expression, the result of
 the expression is returned as a floating point number.
@@ -279,8 +303,10 @@ On the other hand, when you have only a fraction and an integer in the
 expression, the result is a fraction, even if the result has a
 denominator of 1.
 
+```python
 \>\>\> [Fraction(3, 4) + 1 + Fraction(1/4)]{.codestrong}\
 Fraction(2, 1)
+```
 
 Now you know the basics of working with fractions in Python. Let's move
 on to a different kind of number.
@@ -293,9 +319,11 @@ the letter *j* or *J* (as opposed to the letter *i* used in mathematical
 notation). For example, the complex number 2 + 3*i* would be written in
 Python as 2 + 3*j*:
 
+```python
 \>\>\> [a = 2 + 3j]{.codestrong}\
 \>\>\> [type(a)]{.codestrong}\
 \<class \'complex\'\>
+```
 
 As you can see, when we use the [type()]{.literal} function on a complex
 number, Python tells us that this is an object of type
@@ -304,9 +332,11 @@ number, Python tells us that this is an object of type
 You can also define complex numbers using the [complex()]{.literal}
 function:
 
+```python
 \>\>\> [a = complex(2, 3)]{.codestrong}\
 \>\>\> [a]{.codestrong}\
 (2 + 3j)
+```
 
 Here we pass the real and imaginary parts of the complex number as two
 arguments to the [complex()]{.literal} function, and it returns a
@@ -315,19 +345,23 @@ complex number.
 You can add and subtract complex numbers in the same way as real
 numbers:
 
+```python
 \>\>\> [b = 3 + 3j]{.codestrong}\
 \>\>\> [a + b]{.codestrong}\
 (5 + 6j)\
 \>\>\> [a - b]{.codestrong}\
 (-1 + 0j)
+```
 
 []{#page_7}Multiplication and division of complex numbers are also
 carried out similarly:
 
+```python
 \>\>\> [a \* b]{.codestrong}\
 (-3 + 15j)\
 \>\>\> [a / b]{.codestrong}\
 (0.8333333333333334 + 0.16666666666666666j)
+```
 
 The modulus ([%]{.literal}) and the floor division ([//]{.literal})
 operations are not valid for complex numbers.
@@ -335,18 +369,22 @@ operations are not valid for complex numbers.
 The real and imaginary parts of a complex number can be retrieved using
 its [real]{.literal} and [imag]{.literal} attributes, as follows:
 
+```python
 \>\>\> [z = 2 + 3j]{.codestrong}\
 \>\>\> [z.real]{.codestrong}\
 2.0\
 \>\>\> [z.imag]{.codestrong}\
 3.0
+```
 
 The *conjugate* of a complex number has the same real part but an
 imaginary part with an equal magnitude and an opposite sign. It can be
 obtained using the [conjugate()]{.literal} method:
 
+```python
 \>\>\> [z.conjugate()]{.codestrong}\
 (2 - 3j)
+```
 
 Both the real and imaginary parts are floating point numbers. Using the
 real and imaginary parts, you can then calculate the *magnitude* of a
@@ -355,8 +393,10 @@ real and imaginary parts of the number, respectively:
 ![image](graphics/e0007-01.jpg). In Python, this would look like the
 following:
 
+```python
 \>\>\> [(z.real \*\* 2 + z.imag \*\* 2) \*\* 0.5]{.codestrong}\
 3.605551275463989
+```
 
 A simpler way to find the magnitude of a complex number is with the
 [abs()]{.literal} function. The [abs()]{.literal} function returns the
@@ -364,8 +404,10 @@ absolute value when called with a real number as its argument. For
 example, [abs(5)]{.literal} and [abs(-5)]{.literal} both return 5.
 However, for complex numbers, it returns the magnitude:
 
+```python
 \>\>\> [abs(z)]{.codestrong}\
 3.605551275463989
+```
 
 The standard library's [cmath]{.literal} module ([cmath]{.literal} for
 *complex math*) provides access to a number of other specialized
@@ -379,23 +421,29 @@ can write programs that ask a user to input a number, perform specific
 operations on that number, and then display the results of the
 operations. Let's see it in action:
 
+```python
 [➊]{.ent} \>\>\> [a = input()]{.codestrong}\
 [➋]{.ent} 1
+```
 
 At [➊]{.ent}, we call the [input()]{.literal} function, which waits for
 you to type something, as shown at [➋]{.ent}, and press [ENTER]{.small}.
 The input provided is stored in [a]{.literal}:
 
+```python
    \>\>\> [a]{.codestrong}\
 [➌]{.ent} \'1\'
+```
 
 Notice the single quotes around 1 at [➌]{.ent}. The [input()]{.literal}
 function returns the input as a *string*. In Python, a string is any set
 of characters between two quotes. When you want to create a string,
 either single quotes or double quotes can be used:
 
+```python
 \>\>\> [s1 = \'a string\']{.codestrong}\
 \>\>\> [s2 = \"a string\"]{.codestrong}
+```
 
 Here, both [s1]{.literal} and [s2]{.literal} refer to the same string.
 
@@ -406,11 +454,13 @@ have to convert it into the correct number type. A string can be
 converted to an integer or floating point number using the
 [int()]{.literal} or [float()]{.literal} function, respectively:
 
+```python
 \>\>\> [a = \'1\']{.codestrong}\
 \>\>\> [int(a) + 1]{.codestrong}\
 2\
 \>\>\> [float(a) + 1]{.codestrong}\
 2.0
+```
 
 These are the same [int()]{.literal} and [float()]{.literal} functions
 we saw earlier, but this time instead of converting the input from one
@@ -423,12 +473,14 @@ point number (like [\'2.5\']{.literal} or even [\'2.0\']{.literal}) and
 input that string into the [int()]{.literal} function, you'll get an
 error message:
 
+```python
 \>\>\> [int(\'2.0\')]{.codestrong}\
 Traceback (most recent call last):\
 []{#page_9}\
   File \"\<pyshell\#26\>\", line 1, in \<module\>\
     int(\'2.0\')\
 ValueError: invalid literal for int() with base 10: \'2.0\'
+```
 
 This is an example of an *exception*---Python's way of telling you that
 it cannot continue executing your program because of an error. In this
@@ -439,12 +491,14 @@ Similarly, when you supply a fractional number such as 3/4 as an input,
 Python cannot convert it into an equivalent floating point number or
 integer. Once again, a [ValueError]{.literal} exception is raised:
 
+```python
 \>\>\> [a = float(input())]{.codestrong}\
 3/4\
 Traceback (most recent call last):\
   File \"\<pyshell\#25\>\", line 1, in \<module\>\
     a=float(input())\
 ValueError: could not convert string to float: \'3/4\'
+```
 
 You may find it useful to perform the conversion in a
 [try\...except]{.literal} block so that you can *handle* this exception
@@ -465,10 +519,12 @@ This is how you would perform the above conversion in a
 [try\...except]{.literal} block and print a helpful error message on
 invalid input:
 
+```python
 \>\>\> [try:]{.codestrong}\
         [a = float(input(\'Enter a number: \'))]{.codestrong}\
 [except ValueError:]{.codestrong}\
         [print(\'You entered an invalid number\')]{.codestrong}
+```
 
 Note that we need to specify the type of exception we want to handle.
 Here, we want to handle the [ValueError]{.literal} exception, so we
@@ -477,13 +533,17 @@ specify it as [except ValueError]{.literal}.
 Now, when you give an invalid input, such as 3/4, it prints a helpful
 error message, as shown at [➊]{.ent}:
 
+```python
    Enter a number: [3/4]{.codestrong}\
 [➊]{.ent} You entered an invalid number
+```
 
 []{#page_10}You can also specify a prompt with the [input()]{.literal}
 function to tell the user what kind of input is expected. For example:
 
+```python
 \>\>\> [a = input(\'Input an integer: \')]{.codestrong}
+```
 
 The user will now see the message hinting to enter an integer as input:
 
@@ -494,21 +554,25 @@ input, so we'll have to make sure we take care of conversion before we
 attempt to perform any operations on these numbers. You can combine the
 input and conversion in a single statement, as follows:
 
+```python
 \>\>\> [a = int(input())]{.codestrong}\
 1\
 \>\>\> [a + 1]{.codestrong}\
 2
+```
 
 This works great if the user inputs an integer. But as we saw earlier,
 if the input is a floating point number (even one that's equivalent to
 an integer, like 1.0), this will produce an error:
 
+```python
 \>\>\> [a = int(input())]{.codestrong}\
 [1.0]{.codestrong}\
 Traceback (most recent call last):\
   File \"\<pyshell\#42\>\", line 1, in \<module\>\
     a=int(input())\
 ValueError: invalid literal for int() with base 10: \'1.0\'
+```
 
 In order to avoid this error, we could set up a [ValueError]{.literal}
 catch like the one we saw earlier for fractions. That way the program
@@ -526,8 +590,10 @@ integer form.)
 
 Here's an example:
 
+```python
 \>\>\> [1.1.is\_integer()]{.codestrong}\
 False
+```
 
 Here, we call the method [is\_integer()]{.literal} to check if 1.1 is an
 integer, and the result is [False]{.literal} because 1.1 really is a
@@ -535,8 +601,10 @@ floating point number. On the other []{#page_11}hand, when the method is
 called with 1.0 as the floating point number, the result is
 [True]{.literal}:
 
+```python
 \>\>\> [1.0.is\_integer()]{.codestrong}\
 True
+```
 
 We can use [is\_integer()]{.literal} to filter out noninteger input
 while keeping inputs like 1.0, which is expressed as a floating point
@@ -550,13 +618,16 @@ of converting a string such as [\'3/4\']{.literal} to a
 [Fraction]{.literal} object. In fact, this is how we can accept a
 fraction as an input:
 
+```python
 \>\>\> [a = Fraction(input(\'Enter a fraction: \'))]{.codestrong}\
 Enter a fraction: [3/4]{.codestrong}\
 \>\>\> [a]{.codestrong}\
 Fraction(3, 4)
+```
 
 Try entering a fraction such as 3/0 as input:
 
+```python
 \>\>\> [a = Fraction(input(\'Enter a fraction: \'))]{.codestrong}\
 Enter a fraction: [3/0]{.codestrong}\
 Traceback (most recent call last):\
@@ -572,6 +643,7 @@ you're planning on having users enter fractions as input in one of your
 programs, it's a good idea to always catch such exceptions. Here is how
 you can do something like that:
 
+```python
 \>\>\> [try:]{.codestrong}\
         [a = Fraction(input(\'Enter a fraction: \'))\
 except ZeroDivisionError:]{.codestrong}\
@@ -579,6 +651,7 @@ except ZeroDivisionError:]{.codestrong}\
 \
 Enter a fraction: [3/0]{.codestrong}\
 Invalid fraction
+```
 
 Now, whenever your program's user enters a fraction with 0 in the
 denominator, it'll print the message [Invalid fraction]{.literal}.
@@ -586,20 +659,24 @@ denominator, it'll print the message [Invalid fraction]{.literal}.
 []{#page_12}Similarly, the [complex()]{.literal} function can convert a
 string such as [\'2+3j\']{.literal} into a complex number:
 
+```python
 \>\>\> [z = complex(input(\'Enter a complex number: \'))]{.codestrong}\
 Enter a complex number: [2+3j]{.codestrong}\
 \>\>\> [z]{.codestrong}\
 (2+3j)
+```
 
 If you enter the string as [\'2 + 3j\']{.literal} (with spaces), it will
 result in a [ValueError]{.literal} error message:
 
+```python
 \>\>\> [z = complex(input(\'Enter a complex number: \'))]{.codestrong}\
 Enter a complex number: [2 + 3j]{.codestrong}\
 Traceback (most recent call last):\
   File \"\<pyshell\#43\>\", line 1, in \<module\>\
     z = complex(input(\'Enter a complex number: \'))\
 ValueError: complex() arg is a malformed string
+```
 
 It's a good idea to catch the [ValueError]{.literal} exception when
 converting a string to a complex number, as we've done for other number
@@ -620,19 +697,23 @@ integers. We can write a function such as the one below to find whether
 a nonzero integer, [a]{.literal}, is a factor of another integer,
 [b]{.literal}:
 
+```python
 \>\>\> [def is\_factor(a, b):]{.codestrong}\
         [if b % a == 0:]{.codestrong}\
             [return True]{.codestrong}\
         [else:]{.codestrong}\
             [return False]{.codestrong}
+```
 
 We use the [%]{.literal} operator introduced earlier in this chapter to
 calculate the remainder. If you ever find yourself asking a question
 like "Is 4 a factor of 1024?", you can use the [is\_factor()]{.literal}
 function:
 
+```python
 \>\>\> [is\_factor(4, 1024)]{.codestrong}\
 True
+```
 
 For any positive integer *n*, how do we find all its positive factors?
 For each of the integers between 1 and *n*, we check the remainder after
@@ -644,11 +725,13 @@ Before we write the full program, let's take a look at how
 [range()]{.literal} works. A typical use of the [range()]{.literal}
 function looks like this:
 
+```python
 \>\>\> [for i in range(1, 4):]{.codestrong}\
         [print(i)]{.codestrong}\
 1\
 2\
 3
+```
 
 Here, we set up a [for]{.literal} loop and gave the range function two
 arguments. The [range()]{.literal} function starts from the integer
@@ -663,6 +746,7 @@ function accepts only integers as its arguments.
 You can also use the [range()]{.literal} function without specifying the
 start value, in which case it's assumed to be 0. For example:
 
+```python
 \>\>\> [for i in range(5):]{.codestrong}\
         [print(i)]{.codestrong}\
 0\
@@ -670,6 +754,7 @@ start value, in which case it's assumed to be 0. For example:
 2\
 3\
 4
+```
 
 The difference between two consecutive integers produced by the
 [range()]{.literal} function is known as the *step value*. By default,
@@ -678,6 +763,7 @@ the third argument (the start value is *not* optional when you specify a
 step value). For example, the following program prints the odd numbers
 *below* 10:
 
+```python
 \>\>\> [for i in range(1,10,2):]{.codestrong}\
         [print(i)]{.codestrong}\
 1\
@@ -685,6 +771,7 @@ step value). For example, the following program prints the odd numbers
 5\
 7\
 9
+```
 
 Okay, now that we see how the [range()]{.literal} function works, we're
 ready to look at a factor-calculating program. Because I'm writing a
@@ -695,6 +782,7 @@ out by commenting our code with []{#page_14}three straight single quotes
 ([\']{.literal}). The text in between those quotes won't be executed by
 Python as part of the program; it's just commentary for us humans.
 
+```python
    \'\'\'\
    Find the factors of an integer\
    \'\'\'\
@@ -714,6 +802,7 @@ Python as part of the program; it's just commentary for us humans.
            factors(int(b))\
        else:\
            print(\'Please enter a positive integer\')
+```
 
 The [factors()]{.literal} function defines a [for]{.literal} loop that
 iterates once for every integer between 1 and the input integer at
@@ -727,16 +816,20 @@ When you run this program (by selecting **Run**[▸]{.ent}**Run Module**),
 it asks you to input a number. If your number is a positive integer, its
 factors are printed. For example:
 
+```python
 Your Number Please: [25]{.codestrong}\
 1\
 5\
 25
+```
 
 If you enter a non-integer or a negative integer as an input, the
 program prints an error message asking you to input a positive integer:
 
+```python
 Your Number Please: [15.5]{.codestrong}\
 Please enter a positive integer
+```
 
 This is an example of how we can make programs more user friendly by
 always checking for invalid input in the program itself. Because our
@@ -779,11 +872,13 @@ I bought at the grocery store with separate labels created for each and
 wanted to print them out to make a coherent sentence, I could use the
 [format()]{.literal} method as follows:
 
+```python
 \>\>\> [item1 = \'apples\']{.codestrong}\
 \>\>\> [item2 = \'bananas\']{.codestrong}\
 \>\>\> [item3 = \'grapes\']{.codestrong}\
 \>\>\> [print(\'At the grocery store, I bought some {0} and {1} and {2}\'.format(item1, item2, item3))]{.codestrong}\
 At the grocery store, I bought some apples and bananas and grapes
+```
 
 First, we created three labels ([item1]{.literal}, [item2]{.literal},
 and [item3]{.literal}), each referring to a different string
@@ -806,6 +901,7 @@ Number 1: 1 Number 2: 3.578
 Note that the number of placeholders and the number of labels or values
 must be equal.
 
+```python
 []{#page_16}Now that we've seen how [format()]{.literal} works, we're
 ready to take a look at the program for our multiplication table
 printer:
@@ -822,6 +918,7 @@ printer:
    if \_\_name\_\_ == \'\_\_main\_\_\':\
        a = input(\'Enter a number: \')\
        multi\_table(float(a))
+```
 
 The function [multi\_table()]{.literal} implements the main
 functionality of the program. It takes the number for which the
@@ -833,6 +930,7 @@ numbers, printing the product of itself and the number, [a]{.literal}.
 When you execute the program, it asks you to input a number, and the
 program prints its multiplication table:
 
+```python
 Enter a number : [5]{.codestrong}\
 5.0 x 1 = 5.0\
 5.0 x 2 = 10.0\
@@ -844,6 +942,7 @@ Enter a number : [5]{.codestrong}\
 5.0 x 8 = 40.0\
 5.0 x 9 = 45.0\
 5.0 x 10 = 50.0
+```
 
 See how nice and orderly that table looks? That's because we used the
 [.format()]{.literal} method to print the output according to a
@@ -854,10 +953,12 @@ numbers are printed. For example, if you want numbers with only two
 decimal places, you can specify that with the [format()]{.literal}
 method. Here is an example:
 
+```python
 \>\>\> [\'{0}\'.format(1.25456)]{.codestrong}\
 \'1.25456\'\
 \>\>\> [\'{0:.2f}\'.format(1.25456)]{.codestrong}\
 \'1.25\'
+```
 
 The first format statement above simply prints the number exactly as we
 entered it. In the second statement, we modify the place holder to
@@ -868,15 +969,19 @@ decimal point in the next output. Note that the number is rounded if
 there are more numbers after the decimal point than you specified. For
 example:
 
+```python
 \>\>\> [\'{0:.2f}\'.format(1.25556)]{.codestrong}\
 \'1.26\'
+```
 
 Here, 1.25556 is rounded up to the nearest hundredth and printed as
 1.26. If you use [.2f]{.literal} and the number you are printing is an
 integer, zeros are added at the end:
 
+```python
 \>\>\> [\'{0:.2f}\'.format(1)]{.codestrong}\
 \'1.00\'
+```
 
 Two zeros are added because we specified that we should print exactly
 two numbers after the decimal point.
@@ -919,33 +1024,38 @@ then []{#page_18}divide the measurement in centimeters by 100 to obtain
 the measurement in meters. For example, here's how you can convert 25.5
 inches to meters:
 
+```python
 \>\>\> [(25.5 \* 2.54) / 100]{.codestrong}\
 0.6476999999999999
+```
 
 On the other hand, a mile is roughly equivalent to 1.609 kilometers. So
 if you see that your destination is 650 miles away, you're 650 × 1.609
 kilometers away:
 
+```python
 \>\>\> [650 \* 1.609]{.codestrong}\
 1045.85
+```
 
 Now let's take a look at *temperature* conversion---converting
 temperature from Fahrenheit to Celsius and vice versa. Temperature
 expressed in Fahrenheit is converted into its equivalent value in
 Celsius using the formula
 
-::: {.image2}
+
 ![image](graphics/e0018-01.jpg)
-:::
 
 *F* is the temperature in Fahrenheit, and *C* is its equivalent in
 Celsius. You know that 98.6 degrees Fahrenheit is said to be the normal
 human body temperature. To find the corresponding temperature in degrees
 Celsius, we evaluate the above formula in Python:
 
+```python
 \>\>\> [F = 98.6]{.codestrong}\
 \>\>\> [(F - 32) \* (5 / 9)]{.codestrong}\
 37.0
+```
 
 First, we create a label, [F]{.literal}, with the temperature in
 Fahrenheit, 98.6. Next, we evaluate the formula for converting this
@@ -955,15 +1065,15 @@ degrees Celsius.
 To convert temperature from Celsius to Fahrenheit, you would use the
 formula
 
-::: {.image2}
 ![image](graphics/e0018-02.jpg)
-:::
 
 You can evaluate this formula in a similar manner:
 
+```python
 \>\>\> [C = 37]{.codestrong}\
 \>\>\> [C \* (9 / 5) + 32]{.codestrong}\
 98.60000000000001
+```
 
 We create a label, [C]{.literal}, with the value 37 (the normal human
 body temperature in Celsius). Then, we convert it into Fahrenheit using
@@ -976,6 +1086,7 @@ allow users to select the conversion they want to perform, ask for
 relevant input, and then print the calculated result. The program is
 shown below:
 
+```python
    \'\'\'\
    Unit converter: Miles and Kilometers\
    \'\'\'\
@@ -1004,6 +1115,7 @@ shown below:
 \
        if choice == \'2\':\
            miles\_km()
+```
 
 This is a slightly longer program than the others, but not to worry.
 It's actually simple. Let's start from [➊]{.ent}. The
@@ -1047,9 +1159,11 @@ Finding the value of the expression on the right gives you the value of
 *x*, your solution, which is also called the *root* of this equation. In
 Python, you can do this as follows:
 
+```python
 \>\>\> [x = 10 - 500 + 79]{.codestrong}\
 \>\>\> [x]{.codestrong}\
 -411
+```
 
 This is an example of a *linear equation*. Once you have rearranged the
 terms on both sides, the expression is simple enough to evaluate. On the
@@ -1060,9 +1174,7 @@ equations*, generally expressed as *ax*^2^ + *bx* + *c* = 0, where *a*,
 *b*, and *c* are constants. The quadratic formula for calculating the
 roots is given as follows:
 
-::: {.image2}
 ![image](graphics/e0020-01.jpg)
-:::
 
 A quadratic equation has two roots---two values of *x* for which the two
 sides of the quadratic equation are equal (although sometimes these two
@@ -1076,26 +1188,32 @@ of *x*~1~ and *x*~2~. In Python, we first store the values of *a*, *b*,
 and *c* as the labels [a]{.literal}, [b]{.literal}, and [c]{.literal}
 with the appropriate values:
 
+```python
 \>\>\> [a = 1]{.codestrong}\
 \>\>\> [b = 2]{.codestrong}\
 \>\>\> [c = 1]{.codestrong}
+```
 
 []{#page_21}Then, considering that both the formulas have the term
 *b*^2^ -- 4*ac*, we'll define a new label with *D*, such that
 ![image](graphics/e0021-01.jpg):
 
+```python
 \>\>\> [D = (b\*\*2 -- 4\*a\*c)\*\*0.5]{.codestrong}
+```
 
 As you can see, we evaluate the square root of *b*^2^ -- 4*ac* by
 raising it to the 0.5th power. Now, we can write the expressions for
 evaluating *x*~1~ and *x*~2~:
 
+```python
 \>\>\> [x\_1 = (-b + D)/(2\*a)]{.codestrong}\
 \>\>\> [x\_1]{.codestrong}\
 -1.0\
 \>\>\> [x\_2 = (-b - D)/(2\*a)]{.codestrong}\
 \>\>\> [x\_2]{.codestrong}\
 -1.0
+```
 
 In this case, the values of both the roots are the same, and if you
 substitute that value into the equation *x*^2^ + 2*x* + 1, the equation
@@ -1105,6 +1223,7 @@ Our next program combines all these steps in a function
 [roots()]{.literal}, which takes the values of *a*, *b*, and *c* as
 parameters, calculates the roots, and prints them:
 
+```python
 \'\'\'\
 Quadratic equation root calculator\
 \'\'\'\
@@ -1123,6 +1242,7 @@ if \_\_name\_\_ == \'\_\_main\_\_\':\
     b = input(\'Enter b: \')\
     c = input(\'Enter c: \')\
     roots(float(a), float(b), float(c))
+```
 
 At first, we use the labels [a]{.literal}, [b]{.literal}, and
 [c]{.literal} to reference the values of the three constants of a
@@ -1136,12 +1256,14 @@ When you execute the program, it will ask the user to input values of
 *a*, *b*, and *c* corresponding to a quadratic equation they want to
 find the roots for.
 
+```python
 Enter a: [1]{.codestrong}\
 Enter b: [2]{.codestrong}\
 Enter c: [1]{.codestrong}\
 []{#page_22}\
 x1: -1.000000\
 x2: -1.000000
+```
 
 Try solving a few more quadratic equations with different values for the
 constants, and the program will find the roots correctly.
@@ -1152,11 +1274,13 @@ as roots, too. For example, the roots of the equation *x*^2^ + *x* + 1 =
 well. Let's give it a shot by executing the program again (the constants
 are *a* = 1, *b* = 1, and *c* = 1):
 
+```python
 Enter a: [1]{.codestrong}\
 Enter b: [1]{.codestrong}\
 Enter c: [1]{.codestrong}\
 x1: (-0.49999999999999994+0.8660254037844386j)\
 x2: (-0.5-0.8660254037844386j)
+```
 
 The roots printed above are complex numbers (indicated by
 [j]{.literal}), and the program has no problem calculating or displaying
@@ -1174,7 +1298,7 @@ programs that will do mathematical calculations for you. Before we move
 on, here are some programming challenges that will give you a chance to
 further apply what you've learned.
 
-### **[Programming Challenges]** 
+### **Programming Challenges** 
 
 Here are a few challenges that will give you a chance to practice the
 concepts from this chapter. Each problem can be solved in multiple ways,
@@ -1221,6 +1345,7 @@ two fractions. It should ask the user for two fractions and the
 operation the user wants to carry out. As a head start, here's how you
 can write the program with only the addition operation:
 
+```python
    \'\'\'\
    Fraction operations\
    \'\'\'\
@@ -1235,6 +1360,7 @@ can write the program with only the addition operation:
        op = input(\'Operation to perform - Add, Subtract, Divide, Multiply: \')\
        if op == \'Add\':\
            add(a,b)
+```
 
 You've already seen most of the elements in this program. At [➊]{.ent}
 and [➋]{.ent}, we ask the user to input the two fractions. Then, we ask
@@ -1244,19 +1370,23 @@ user enters [\'Add\']{.literal} as input, we call the function
 fractions passed as arguments. The [add()]{.literal} function performs
 the operation and prints the result. For example:
 
+```python
 Enter first fraction: [3/4]{.codestrong}\
 Enter second fraction: [1/4]{.codestrong}\
 Operation to perform - Add, Subtract, Divide, Multiply: [Add]{.codestrong}\
 Result of Addition: 1
+```
 
 []{#page_24}Try adding support for other operations such as subtraction,
 division, and multiplication. For example, here's how your program
 should be able to calculate the difference of two fractions:
 
+```python
 Enter first fraction: [3/4]{.codestrong}\
 Enter second fraction: [1/4]{.codestrong}\
 Operation to perform - Add, Subtract, Divide, Multiply: [Subtract]{.codestrong}\
 Result of Subtraction: 2/4
+```
 
 In the case of division, you should let the user know whether the first
 fraction is divided by the second fraction or vice versa.
@@ -1276,6 +1406,7 @@ up an *infinite loop*, or a loop that doesn't exit unless explicitly
 asked to do so. Below, you can see an example of the layout for such a
 program:
 
+```python
    \'\'\'\
    Run until exit layout\
    \'\'\'\
@@ -1289,6 +1420,7 @@ program:
 [➋]{.ent}         answer = input(\'Do you want to exit? (y) for yes \')\
            if answer == \'y\':\
                break
+```
 
 We define an infinite loop using [while True]{.literal} at [➊]{.ent}. A
 [while]{.literal} loop continues to execute unless the condition
@@ -1306,6 +1438,7 @@ loop). If the user enters any other input (or none at all, just pressing
 continues doing so until the user wishes to exit. Here is a sample run
 of the program:
 
+```python
 I am in an endless loop\
 Do you want to exit? (y) for yes [n]{.codestrong}\
 I am in an endless loop\
@@ -1314,11 +1447,13 @@ I am in an endless loop\
 Do you want to exit? (y) for yes [n]{.codestrong}\
 I am in an endless loop\
 Do you want to exit? (y) for yes [y]{.codestrong}
+```
 
 Based on this example, let's rewrite the multiplication table generator
 so that it keeps going until the user wants to exit. The new version of
 the program is shown below:
 
+```python
 \'\'\'\
 Multiplication table printer with\
 exit power to the user\
@@ -1339,6 +1474,7 @@ if \_\_name\_\_ == \'\_\_main\_\_\':\
         [answer = input(\'Do you want to exit? (y) for yes \')]{.codestrong}\
         [if answer == \'y\':]{.codestrong}\
             [break]{.codestrong}
+```
 
 If you compare this program to the one we wrote earlier, you'll see that
 the only change is the addition of the [while]{.literal} loop, which
@@ -1351,6 +1487,7 @@ ask whether the user wants to exit the program. If the user doesn't want
 to exit, the program will be ready to print the table for another
 number. Here is a sample run:
 
+```python
 Enter a number: [2]{.codestrong}\
 2.000000 x 1.000000 = 2.000000\
 2.000000 x 2.000000 = 4.000000\
@@ -1365,6 +1502,7 @@ Enter a number: [2]{.codestrong}\
 2.000000 x 10.000000 = 20.000000\
 Do you want to exit? (y) for yes [n]{.codestrong}\
 Enter a number:
+```
 
 Try rewriting some of the other programs in this chapter so that they
 continue executing until asked by the user to exit.
