--- a/0_doing_python_with_math/ch01.md
+++ b/0_doing_python_with_math/ch01.md
@@ -45,33 +45,33 @@ Give it a try. You can add and subtract numbers using the addition
 (+) and subtraction (--) operators. For example:
 
 ```
->>> [1 + 2]
+>>> [1 + 2]  # Adding two integers
 3
->>> [1 + 3.5]
+>>> [1 + 3.5]  # Adding an integer and a float
 4.5
->>> [-1 + 2.5]
+>>> [-1 + 2.5]  # Adding a negative integer and a float
 1.5
->>> [100 -- 45]
+>>> [100 -- 45]  # Subtracting an integer from another integer
 55
->>> [-1.1 + 5]
+>>> [-1.1 + 5]  # Adding a negative float to an integer
 3.9
 ```
 
 To multiply, use the multiplication (*) operator:
 
 ```
->>> [3 * 2]
+>>> [3 * 2]  # Multiplying two integers
 6
->>> [3.5 * 1.5]
+>>> [3.5 * 1.5]  # Multiplying two floats
 5.25
 ```
 
 To divide, use the division (/) operator:
 
 ```
->>> [3 / 2]
+>>> [3 / 2]  # Dividing an integer by another integer
 1.5
->>> [4 / 2]
+>>> [4 / 2]  # Dividing an integer by another integer
 2.0
 ```
 
@@ -81,7 +81,7 @@ result in the form of an integer, with any decimal values removed, you
 should use the floor division (//) operator:
 
 ```
->>> [3 // 2]
+>>> [3 // 2]  # Floor division of two integers
 1
 ```
 
@@ -91,7 +91,7 @@ integer. This becomes interesting when one of the numbers is negative.
 For example:
 
 ```
->>> [-3 // 2]
+>>> [-3 // 2]  # Floor division of a negative integer by a positive integer
 -2
 ```
 
@@ -103,7 +103,7 @@ On the other hand, if you want just the remainder, you should use the
 modulo % operator:
 
 ```
->>> [9 % 2]
+>>> [9 % 2]  # Modulo operation on two integers
 1
 ```
 
@@ -111,11 +111,11 @@ You can calculate the power of numbers using the exponential
 ** operator. The examples below illustrate this:
 
 ```
->>> [2 ** 2]
+>>> [2 ** 2]  # Squaring an integer
 4
->>> [2 ** 10]
+>>> [2 ** 10]  # Raising an integer to the power of 10
 1024
->>> [1 ** 10]
+>>> [1 ** 10]  # Raising 1 to any power
 1
 ```
 
@@ -124,7 +124,7 @@ For example, the square root of a number *n* can be expressed as
 *n*^1/2^ and the cube root as *n*^1/3^:
 
 ```
->>> [8 ** (1/3)]
+>>> [8 ** (1/3)]  # Calculating the cube root of an integer
 2.0
 ```
 
@@ -136,9 +136,9 @@ addition, and subtraction. Consider the following two expressions---one
 without parentheses and one with:
 
 ```
->>> [5 + 5 * 5]
+>>> [5 + 5 * 5]  # Without parentheses, multiplication is performed first
 30
->>> [(5 + 5) * 5]
+>>> [(5 + 5) * 5]  # With parentheses, addition is performed first
 50
 ```
 
